--- a/m/index.html
+++ b/m/index.html
@@ -44,11 +44,11 @@
                     </div>
                     <p class="weui-grid__label">未结事项</p>
                 </a-->
-                <a href="javascript:;" class="weui-grid">
+                <a href="busi/steps/select-busi.html" class="weui-grid">
                     <div class="weui-grid__icon">
                         <img src="images/icon_nav_actionSheet.png" alt="">
                     </div>
-                    <p class="weui-grid__label">&nbsp;</p>
+                    <p class="weui-grid__label">入网测试版</p>
                 </a>
                 <a href="javascript:;" class="weui-grid">
                     <div class="weui-grid__icon">
