--- a/m/busi/steps/extra-info.html
+++ b/m/busi/steps/extra-info.html
@@ -24,7 +24,7 @@
 							<input class="weui-input" type="text" name="shop_name" required="">
 						</div>
 					</div>
-					<div class="weui-cell hide" id="debit-card-fee-cell">
+					<div class="weui-cell" id="debit-card-fee-cell">
 						<div class="weui-cell__hd">
 							<label class="weui-label">借记卡手续费<span class="required">*</span></label>
 						</div>
@@ -33,7 +33,7 @@
 							<input type="hidden" name="debit_card_fee">
 						</div>
 					</div>
-					<div class="weui-cell hide" id="credit-card-fee-cell">
+					<div class="weui-cell" id="credit-card-fee-cell">
 						<div class="weui-cell__hd">
 							<label class="weui-label">贷记卡手续费<span class="required">*</span></label>
 						</div>
@@ -42,7 +42,7 @@
 							<input type="hidden" name="credit_card_fee">
 						</div>
 					</div>
-					<div class="weui-cell weui-cell_vcode hide" id="fee-cell">
+					<div class="weui-cell weui-cell_vcode" id="fee-cell">
 						<div class="weui-cell__hd">
 							<label for="" class="weui-label">手续费<span class="required">*</span></label>
 						</div>
