--- a/m/busi/steps/extra-info.html
+++ b/m/busi/steps/extra-info.html
@@ -102,7 +102,7 @@
 				</div>
 			</div>
 			<div class="weui-btn-area btn-area">
-				<a id="back-btn" href="javascript:" class="weui-btn weui-btn_default" onclick="weui.page.back()">上一步</a>
+				<a id="back-btn" href="javascript:" class="weui-btn weui-btn_default" onclick="history(-1)">上一步</a>
 				<a id="submit-btn" href="javascript:" class="weui-btn weui-btn_primary">提交</a>
 			</div>
 		</form>
@@ -187,10 +187,11 @@
 		}
 	}
     $(function() {
+		/*
 		history.pushState(null, null, document.URL);
         window.addEventListener('popstate', function () {
             history.pushState(null, null, document.URL);
-        });
+        });*/
         $('#submit-btn').on('click', onSubmit);
         $('#city-picker').on('focus', function() {
             $$.showPicker(this, districtData);
