--- a/m/register.html
+++ b/m/register.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>账户注册</title>
     <link rel="stylesheet" href="js/lib/weuijs/style/weuijs.min.css">
+    <link rel="stylesheet" href="css/ui-base.css">
     <style>
     .btn_plain-disabled {
         color: rgba(0, 0, 0, .2);
@@ -22,7 +23,7 @@
         <div class="weui-cells weui-cells_form">
             <div class="weui-cell" id="mobile-cell">
                 <div class="weui-cell__hd">
-                    <label class="weui-label">手机号</label>
+                    <label class="weui-label">手机号<span class="required">*</span></label>
                 </div>
                 <div class="weui-cell__bd">
                     <input class="weui-input" type="tel" required="" pattern="^\d{11}$" placeholder="请输入手机号" notMatchTips="请输入有效的手机号" name="mobile">
@@ -30,7 +31,7 @@
             </div>
             <div class="weui-cell" id="mobile-cell">
                 <div class="weui-cell__hd">
-                    <label class="weui-label">姓名</label>
+                    <label class="weui-label">姓名<span class="required">*</span></label>
                 </div>
                 <div class="weui-cell__bd">
                     <input class="weui-input" type="text" required="" placeholder="请填写姓名" notMatchTips="请填写姓名" name="nickname">
@@ -38,7 +39,7 @@
             </div>
             <div class="weui-cell weui-cell_vcode" id="vcode-cell">
                 <div class="weui-cell__hd">
-                    <label class="weui-label">验证码</label>
+                    <label class="weui-label">验证码<span class="required">*</span></label>
                 </div>
                 <div class="weui-cell__bd">
                     <input class="weui-input" type="number" required="" pattern="^\d{4}$" placeholder="请输入验证码" notMatchTips="请输入正确的验证码" name="vcode">
@@ -60,7 +61,7 @@
             </div> -->
             <div class="weui-cell">
                 <div class="weui-cell__hd">
-                    <label class="weui-label">登录密码</label>
+                    <label class="weui-label">登录密码<span class="required">*</span></label>
                 </div>
                 <div class="weui-cell__bd">
                     <input class="weui-input" type="password" required="" placeholder="请输入登录密码" name="login_pwd" id="login-pwd">
