IOS 选择文件传图片

--- a/m/busi/steps/photos.html
+++ b/m/busi/steps/photos.html
@@ -25,7 +25,7 @@
                                 <ul class="weui-uploader__files">
                                 </ul>
                                 <div class="weui-uploader__input-box">
-                                    <input class="weui-uploader__input" type="file" accept="image/*" capture="camera">
+                                    <input class="weui-uploader__input" type="file" accept="image/*" multiple>
                                 </div>
                             </div>
                         </div>
@@ -71,7 +71,7 @@
                                 <ul class="weui-uploader__files">
                                 </ul>
                                 <div class="weui-uploader__input-box">
-                                    <input class="weui-uploader__input" type="file" accept="image/*" capture="camera">
+                                    <input class="weui-uploader__input" type="file" accept="image/*" multiple>
                                 </div>
                             </div>
                         </div>
@@ -115,7 +115,7 @@
                                 <ul class="weui-uploader__files">
                                 </ul>
                                 <div class="weui-uploader__input-box">
-                                    <input class="weui-uploader__input" type="file" accept="image/*" capture="camera">
+                                    <input class="weui-uploader__input" type="file" accept="image/*" multiple>
                                 </div>
                             </div>
                         </div>
@@ -173,7 +173,7 @@
                                 <ul class="weui-uploader__files">
                                 </ul>
                                 <div class="weui-uploader__input-box">
-                                    <input class="weui-uploader__input" type="file" accept="image/*" capture="camera">
+                                    <input class="weui-uploader__input" type="file" accept="image/*" multiple>
                                 </div>
                             </div>
                         </div>
